2003-09-15  Tom Tromey  <tromey@redhat.com>

	* monotone.texi (Getting Started): Don't mention MT_DB or
	MT_BRANCH.
	(Adding Files): Explicitly use --db and --branch.
	* app_state.hh (app_state): New fields options, options_changed.
	Declare new methods.  Include work.hh.
	* work.cc (work_file_name): New constant.
	(add_to_options_map): New structure.
	(get_options_path): New function.
	(read_options_map, write_options_map): Likewise.
	* work.hh (options_map): New type.
	(get_options_path, read_options_map, write_options_map): Declare.
	* commands.cc (add, drop, commit, update, revert, checkout,
	merge): Write options file.
	* app_state.cc (database_option, branch_option): New constants.
	(app_state::app_state): Read options file.
	(app_state::set_database): New method.
	(app_state::set_branch): Likewise.
	(app_state::write_options): Likewise.
	Include work.hh.
	* monotone.cc (cpp_main): Don't set initial database name on
	app.  Use new settor methods.  Don't look at MT_BRANCH or MT_DB.

2003-09-14  graydon hoare  <graydon@pobox.com>

	* vocab.cc, vocab.hh: Add streamers for vocab terms in preparation
	for switch to formatter.

	* cert.cc (check_signature): Treat missing key as failed check.
	* commands.cc (lscerts): Warn when keys are missing.

	* rcs_import.cc, nntp_tasks.cc, http_tasks.cc: Tick progress.

	* sanity.cc, monotone.cc: Tidy up output a bit.

	* xdelta.cc: Add code to handle empty files. Maybe correct?

	* ui.cc, ui.hh: Add.

2003-09-13  Tom Tromey  <tromey@redhat.com>

	* tests/t_nntp.at: If we can't find tcpserver or snntpd, skip the
	test.
	* tests/t_http.at: If we can't find boa or depot.cgi, skip the
	test.

2003-09-12  graydon hoare  <graydon@pobox.com>

	* update.cc (pick_update_target): Only insert base rev as update
	candidate if it actually exists in db.

	* commands.cc, database.cc, database.hh: Implement id completion
	command, and general id completion in all other commands.

2003-09-12  Tom Tromey  <tromey@redhat.com>
